--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "packageManager": "pnpm@10.10.0",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.12.0",
+    "yanki-connect": "^2.2.3",
     "zod": "^3.25.28"
   },
   "devDependencies": {
