--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "@arielbk/anki-mcp",
-  "version": "0.2.0",
+  "version": "0.2.2",
   "description": "MCP server for integrating with Anki flashcards",
   "type": "module",
   "main": "dist/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/arielbk/anki-mcp"
+  },
   "bin": {
     "anki-mcp": "dist/index.js"
   },
